# front-desk

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: .gitignore  conf.py  index.rst
keyosk/: __about__.py  _fields.py  constants.py  datatypes.py  fields.py
keyosk/config/: __init__.py  storage.py
keyosk/database/: __init__.py  _shared.py  account.py  account_acl.py  domain.py  domain_access_list.py  domain_admin.py  domain_permission.py  scope.py  token.py
keyosk/datatypes/: __init__.py
keyosk/resources/: __init__.py  _shared.py  account.py  auth.py  blacklist.py  domain.py  openapi.py  public_key.py
keyosk/serializers/: __init__.py  account.py  account_acl.py  domain.py  domain_extras.py  scope.py
tests/: fixtures.py  test_about.py  test_config.py  test_database_account.py  test_database_account_acl.py  test_database_domain.py  test_fields.py  test_metadata.py  test_serializers_account.py  test_serializers_domain.py
