[tool.poetry]
name = "keyosk"
version = "0.1.0-alpha-1"
description = "Simple JWT application for HTTP-based microservices"
authors = ["Ethan Paul <ethan.paul@enp.one>"]
license = "MIT"
repository = "https://github.com/enpaul/keyosk/"
homepage = "https://github.com/enpaul/keyosk/"
documentation = "https://github.com/enpaul/keyosk/"
packages = [{include = "keyosk"}]
keywords = ["jwt", "rest", "flask", "docker", "microservice", "http"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Flask",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "^0.7", python = "3.6"}
marshmallow = "^3.5.0"
passlib = "^1.7.2"
peewee = "^3.13.1"
pymysql = "^0.9.3"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = {version = "^19.10b0", allow-prereleases = true}
ipython = "^7.12.0"
mypy = "^0.761"
pre-commit = "^2.1.0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"
reorder-python-imports = "^1.9.0"
sphinx = "^2.4.2"
sphinx-autodoc-typehints = "^1.10.3"
tox = "^3.14.5"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
